Social Media Icons w/transitions added
Some filler things was also added to see the initial look

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WST Project || Mark And Andrea</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/642cd792e7.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="main-container">
@@ -12,13 +13,29 @@
         <!-- Start of left -->
         <div class="left">
             <div class="pic">
-                
+                <img src="Images/1.jpg">
             </div>
             <div class="details">
-
+                <div class="info" id="name">Mark David L. Basinillo</div>
+                <div class="info" id="age">20 years old</div>
+                <div class="info" id="bday">June 28, 2003</div>
+                <div class="info" id="verse">John 3:16</div>
+                <div class="info" id="quote">"Love is a funny thing"</div>
+                <div class="info" id="hobbies">My Hobby is playing</div>
             </div>
             <div class="socials">
-
+                <div class="button">
+                    <div class="icon"><i class="fab fa-facebook-f"></i></div>
+                    <span>Facebook</span>
+                </div>
+                <div class="button">
+                    <div class="icon"><i class="fab fa-instagram"></i></div>
+                    <span>Instagram</span>
+                </div>
+                <div class="button">
+                    <div class="icon"><i class="fab fa-twitter"></i></div>
+                    <span>Twitter</span>
+                </div>
             </div>
         </div>
 
