Changing text on hover

--- a/index.html
+++ b/index.html
@@ -10,19 +10,24 @@
 <body>
     <div class="main-container">
 
-        <!-- Start of left -->
+        <!-- Start of left side code -->
         <div class="left">
-            <div class="pic">
-                <img src="Images/1.jpg">
+            <!-- header -->
+            <div class="badges">
+                
             </div>
+
+            <!-- content -->
             <div class="details">
-                <div class="info" id="name">Mark David L. Basinillo</div>
-                <div class="info" id="age">20 years old</div>
-                <div class="info" id="bday">June 28, 2003</div>
-                <div class="info" id="verse">John 3:16</div>
-                <div class="info" id="quote">"Love is a funny thing"</div>
-                <div class="info" id="hobbies">My Hobby is playing</div>
+                <div class="button"><div class="name"></div></div>
+                <div class="button"><div class="age"></div></div>
+                <div class="button"><div class="bday"></div></div>
+                <div class="button"><div class="verse"></div></div>
+                <div class="button"><div class="quote"></div></div>
+                <div class="button"><div class="hobbies"></div></div>
             </div>
+
+            <!-- footer -->
             <div class="socials">
                 <div class="button">
                     <div class="icon"><i class="fab fa-facebook-f"></i></div>
@@ -39,9 +44,9 @@
             </div>
         </div>
 
-        <!-- Start of right -->
+        <!-- Start of right side code -->
         <div class="right">
-            <div class="pic">
+            <div class="badges">
                 
             </div>
             <div class="details">
