Modified BG Picture and Cleaned the Social Icons
BG Picture Personalized for me
Adjusted the hover width of each social icons

--- a/index.html
+++ b/index.html
@@ -22,22 +22,21 @@
                 <div class="button"><div class="name"></div></div>
                 <div class="button"><div class="age"></div></div>
                 <div class="button"><div class="bday"></div></div>
-                <div class="button"><div class="verse"></div></div>
                 <div class="button"><div class="quote"></div></div>
                 <div class="button"><div class="hobbies"></div></div>
             </div>
 
             <!-- footer -->
             <div class="socials">
-                <div class="button">
+                <div class="button facebook">
                     <div class="icon"><i class="fab fa-facebook-f"></i></div>
                     <span>Facebook</span>
                 </div>
-                <div class="button">
+                <div class="button instagram">
                     <div class="icon"><i class="fab fa-instagram"></i></div>
                     <span>Instagram</span>
                 </div>
-                <div class="button">
+                <div class="button twitter">
                     <div class="icon"><i class="fab fa-twitter"></i></div>
                     <span>Twitter</span>
                 </div>
@@ -64,8 +63,8 @@
     </div>
 
     <!-- Lines -->
-    <div class="top-line"></div>
-    <div class="bottom-line"></div>
+    <!-- <div class="top-line"></div>
+    <div class="bottom-line"></div> -->
     
 </body>
 </html>
