Changed Colors and added pictures
Changed the colors of the button divs
Added pictures for initial look of the right side

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
                 <div class="pic">
                     <img src="Images/mlogo.png">
                 </div>
+                <div class="bible">
+                    <div class="book">1 Peter 5:7</div>
+                    <div class="verse">Cast all your anxiety on him because he cares for you.</div>
+                </div>
             </div>
             
 
@@ -37,7 +41,7 @@
                 </div>
                 <div class="button instagram">
                     <div class="icon"><i class="fab fa-instagram"></i></div>
-                    <span>Instagram</span>
+                    <span>itsmarksheesh</span>
                 </div>
                 <div class="button twitter">
                     <div class="icon"><i class="fab fa-twitter"></i></div>
@@ -51,7 +55,7 @@
             <!-- header -->
             <div class="header">
                 <div class="pic">
-                    <img src="">
+                    <img src="Images/alogo.png">
                 </div>
             </div>
 
@@ -64,9 +68,23 @@
                 <div class="button"><div class="hobbies"></div></div>
             </div>
 
+            <!-- footer -->
             <div class="socials">
-
+                <div class="button facebook">
+                    <div class="icon"><i class="fab fa-facebook-f"></i></div>
+                    <span>Facebook</span>
+                </div>
+                <div class="button instagram">
+                    <div class="icon"><i class="fab fa-instagram"></i></div>
+                    <span></span>
+                </div>
+                <div class="button twitter">
+                    <div class="icon"><i class="fab fa-twitter"></i></div>
+                    <span>Twitter</span>
+                </div>
             </div>
+        </div>
+
         </div>
 
     </div>
