--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
         <div class="right">
             <!-- header -->
             <div class="header">
+                <div class="bible">
+                    <div class="book">Psalms 120:1</div>
+                    <div class="verse">I call on the Lord in my distress, and He answers me.</div>
+                </div>
                 <div class="pic">
                     <img src="Images/alogo.png">
                 </div>
