--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                     <img src="Images/mlogo.png">
                 </div>
                 <div class="bible">
-                    <div class="book">1 Peter 5:7</div>
-                    <div class="verse">Cast all your anxiety on him because he cares for you.</div>
+                    <div class="book">1 Peter 5:7 (NIV)</div>
+                    <div class="verse">Cast all your anxiety on Him because He cares for you.</div>
                 </div>
             </div>
             
@@ -37,15 +37,15 @@
             <div class="socials">
                 <div class="button facebook">
                     <div class="icon"><i class="fab fa-facebook-f"></i></div>
-                    <span>Facebook</span>
+                    <a href="https://www.facebook.com/itsmarksheesh/"><span>itsmarksheesh</span></a>
                 </div>
                 <div class="button instagram">
                     <div class="icon"><i class="fab fa-instagram"></i></div>
-                    <span>itsmarksheesh</span>
+                    <a href="https://www.instagram.com/itsmarksheesh/"><span>itsmarksheesh</span></a>
                 </div>
                 <div class="button twitter">
                     <div class="icon"><i class="fab fa-twitter"></i></div>
-                    <span>Twitter</span>
+                    <a href="https://x.com/itsmakusheesh?t=MnTdhwSSWN8Q8xYusHAg0A&s=07"><span>itsmakusheesh</span></a>
                 </div>
             </div>
         </div>
@@ -55,7 +55,7 @@
             <!-- header -->
             <div class="header">
                 <div class="bible">
-                    <div class="book">Psalms 120:1</div>
+                    <div class="book">Psalms 120:1 (NIV)</div>
                     <div class="verse">I call on the Lord in my distress, and He answers me.</div>
                 </div>
                 <div class="pic">
@@ -76,15 +76,15 @@
             <div class="socials">
                 <div class="button facebook">
                     <div class="icon"><i class="fab fa-facebook-f"></i></div>
-                    <span>Facebook</span>
+                    <a href="https://www.facebook.com/andreajoydt"><span>andreajoydt</span></a>
                 </div>
                 <div class="button instagram">
                     <div class="icon"><i class="fab fa-instagram"></i></div>
-                    <span></span>
+                    <a href="https://www.instagram.com/aeya03__/"><span>aeya03_</span></a>
                 </div>
                 <div class="button twitter">
                     <div class="icon"><i class="fab fa-twitter"></i></div>
-                    <span>Twitter</span>
+                    <a href="https://twitter.com/aeyabaduday"><span>aeyabaduday</span></a>
                 </div>
             </div>
         </div>
