--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <img src="Images/mlogo.png">
                 </div>
                 <div class="bible">
-                    <div class="book">1 Peter 5:7 (NIV)</div>
+                    <div class="book">1 Peter 5:7</div>
                     <div class="verse">Cast all your anxiety on Him because He cares for you.</div>
                 </div>
             </div>
@@ -55,7 +55,7 @@
             <!-- header -->
             <div class="header">
                 <div class="bible">
-                    <div class="book">Psalms 120:1 (NIV)</div>
+                    <div class="book">Psalms 120:1 </div>
                     <div class="verse">I call on the Lord in my distress, and He answers me.</div>
                 </div>
                 <div class="pic">
